// grpc server is API Server and client is Kubectl
syntax = "proto3";

package apiserver_for_kubectl;

option go_package = "minik8s/pkg/proto";

import "proto/share.proto";

message ApplyPodRequest {
    bytes data = 1;
}


service ApiServerKubectlService {
    rpc SayHello(share.HelloRequest) returns (share.HelloResponse);
    rpc ApplyPod(ApplyPodRequest) returns (share.StatusResponse);
}