// grpc server is Kubelet and grpc client is Api Server
syntax = "proto3";

package kubelet_for_apiserver;

option go_package = "minik8s/pkg/proto";

import "share.proto";

service kubeletApiServerService {
    rpc SayHello(share.HelloRequest) returns (share.HelloResponse);
    rpc CreatePod(share.ApplyPodRequest) returns (share.StatusResponse);
}
